// type.ts
export interface Type {
    id_type: number; 
    label: string; 
  }
  