// unite.ts
export interface Unite {
    id: number; 
    unite: string; 
  }
  