// Priorite.ts
export interface Priorite {
    id: number; 
    label: string; 
  }
  