// profession.ts
export interface Profession {
    id: number; 
    label: string; 
  }
  