// Situation.ts
export interface Situation {
    id: number; 
    label: string; 
  }
  