// Status.ts
export interface Status {
    id: number; 
    label: string; 
    tableref:string;
  }
  