//client.ts
export interface Client {
    id: number;
  name: string;
  telephone: string;
  email: string;
  address: string;
  status: string;
  note: string;

}
